templates/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-app
  labels:
    app: to-do-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: to-do-app
  template:
    metadata:
      labels:
        app: to-do-app
    spec:
      containers:
        - name: to-do-app
          image: quay.io/martinezj/to-do-app:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
