templates/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do-app
spec:
  selector:
    app: to-do-app
  ports:
    - protocol: TCP
      port: 3000 
      targetPort: 3000
  type: ClusterIP
